changing the Services section

--- a/index.html
+++ b/index.html
@@ -77,55 +77,65 @@
                     </h2>
                     <div class="servises__items">
                         <div class="servises__item" href="#">
-
-                            <img class="item__icon" src="/img/icon_bg.svg" alt="">
                             <div class="item__title">
                                 Сайт "под ключ"
                             </div>
-                            <p class="item__text">
-                                Разрабатываем сайт, соеденяем ваши желания с реальностью.
-                            </p>
+                            <div class="item__text">
+                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <p>Разрабатываем сайт, соеденяем ваши желания с реальностью.</p>
+                            </div>
+                            <div class="item__text">
+                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <p>Дизайнер создает макет,
+                                    Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs, Yandex.metrika)
+                            </div>
                             <div class="item__button">
-                                узнать больше..
+                                от 40 000 руб
                             </div>
                         </div>
                         <div class="servises__item" href="#">
-                            <img class="item__icon" src="/img/icon_bg.svg" alt="">
-
                             <div class="item__title">
                                 Верстка Вашего макета
                             </div>
-                            <p class="item__text">
-                                Вы получили макет от дизайнера и хотите увидеть его по адресу вашего сайта.
-                                И еще чего то написать
-                            </p>
+                            <div class="item__text">
+                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <p>Вы получили макет от дизайнера и хотите увидеть его по адресу вашего сайта.</p>
+                            </div>
+                            <div class="item__text">
+                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <p>Вы получили макет от дизайнера и хотите увидеть его по адресу вашего сайта.</p>
+                            </div>
                             <div class="item__button">
-                                узнать больше..
+                                25 000 руб
                             </div>
                         </div>
                         <div class="servises__item" href="#">
-                            <img class="item__icon" src="/img/icon_bg.svg" alt="">
                             <div class="item__title">
                                 Свободный макет
                             </div>
-                            <p class="item__text">
-                                Используем "как есть" свободный макет из моей библиотеки макетов, легкое редактирование
-                                прилагаеться.
-                            </p>
+                            <div class="item__text">
+                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <p>Используем "как есть" бесплатный макет, легкое редактирование
+                                    прилагаеться.</p>
+                            </div>
                             <div class="item__button">
-                                узнать больше..
+                                от 10 000 руб
                             </div>
                         </div>
                         <div class="servises__item" href="#">
-                            <img class="item__icon" src="/img/icon_bg.svg" alt="">
                             <div class="item__title">
                                 Модернизация сайта
                             </div>
-                            <p class="item__text">
-                                У Вас уже есть сайт, но ему нужна помощь.
-                            </p>
+                            <div class="item__text">
+                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <p> У Вас уже есть сайт, но ему нужна помощь.</p>
+                            </div>
+                            <div class="item__text">
+                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <p> Исправления ошибок, расширение функционала, редизайн</p>
+                            </div>
                             <div class="item__button">
-                                узнать больше..
+                                от 5000 руб
                             </div>
                         </div>
                     </div>
