--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
                                 Сайт "под ключ"
                             </div>
                             <div class="item__text">
-                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <img class="item__text__image" src="./img/check.svg" alt="">
                                 <p>Разрабатываем сайт, соеденяем ваши желания с реальностью.</p>
                             </div>
                             <div class="item__text">
-                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <img class="item__text__image" src="./img/check.svg" alt="">
                                 <p>Дизайнер создает макет,
                                     Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs, Yandex.metrika)
                             </div>
@@ -106,11 +106,11 @@
                                 Верстка Вашего макета
                             </div>
                             <div class="item__text">
-                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <img class="item__text__image" src="./img/check.svg" alt="">
                                 <p>Вы получили макет от дизайнера и хотите увидеть его по адресу вашего сайта.</p>
                             </div>
                             <div class="item__text">
-                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <img class="item__text__image" src="./img/check.svg" alt="">
                                 <p>Вы получили макет от дизайнера и хотите увидеть его по адресу вашего сайта.</p>
                             </div>
                             <div class="item__button">
@@ -122,7 +122,7 @@
                                 Свободный макет
                             </div>
                             <div class="item__text">
-                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <img class="item__text__image" src="./img/check.svg" alt="">
                                 <p>Используем "как есть" бесплатный макет, легкое редактирование
                                     прилагаеться.</p>
                             </div>
@@ -135,11 +135,11 @@
                                 Модернизация сайта
                             </div>
                             <div class="item__text">
-                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <img class="item__text__image" src="./img/check.svg" alt="">
                                 <p> У Вас уже есть сайт, но ему нужна помощь.</p>
                             </div>
                             <div class="item__text">
-                                <img class="item__text__image" src="/img/check.svg" alt="">
+                                <img class="item__text__image" src="./img/check.svg" alt="">
                                 <p> Исправления ошибок, расширение функционала, редизайн</p>
                             </div>
                             <div class="item__button">
@@ -221,7 +221,7 @@
                     </div>
                     <div class="middle__achievements">
                         <div class="achievements__item">
-                            <img class="achievements__item-icon" src="/img/icon_bg.svg" alt="">
+                            <img class="achievements__item-icon" src="./img/icon_bg.svg" alt="">
                             <div class="achievements__item-title text__item">
                                 3+ года
                             </div>
@@ -230,7 +230,7 @@
                             </div>
                         </div>
                         <div class="achievements__item">
-                            <img class="achievements__item-icon" src="/img/icon_bg.svg" alt="">
+                            <img class="achievements__item-icon" src="./img/icon_bg.svg" alt="">
                             <div class="achievements__item-title text__item">
                                 12+
                             </div>
@@ -270,7 +270,7 @@
         </section>
         <section class="get-started">
             <div class="container">
-                <img class="idea" src="/img/idea.svg" alt="">
+                <img class="idea" src="./img/idea.svg" alt="">
                 <div class="get-started__container">
                     <div class="get-started__inner">
                         <div class="get-started__items">
@@ -308,7 +308,7 @@
                     </h2>
                     <div class="testimonials__items">
                         <div class="testimonials__item" href="#">
-                            <img class="testimonials__item-icon item__icon" src="/img/star.svg" alt="">
+                            <img class="testimonials__item-icon item__icon" src="./img/star.svg" alt="">
                             <p class="testimonials__item-text item__text">
                                 Outsource your digital marketing efforts, instead of handling in-house. They can provide
                                 your business with a variety. </p>
@@ -320,7 +320,7 @@
                             </div>
                         </div>
                         <div class="testimonials__item testimonials__item-middle" href="#">
-                            <img class="testimonials__item-icon item__icon" src="/img/star.svg" alt="">
+                            <img class="testimonials__item-icon item__icon" src="./img/star.svg" alt="">
                             <p class="testimonials__item-text item__text">
                                 A digital agency is a business you hire to outsource your digital marketing efforts,
                                 instead
@@ -335,7 +335,7 @@
                             </div>
                         </div>
                         <div class="testimonials__item" href="#">
-                            <img class="testimonials__item-icon item__icon" src="/img/star.svg" alt="">
+                            <img class="testimonials__item-icon item__icon" src="./img/star.svg" alt="">
                             <p class="testimonials__item-text item__text">
                                 Provide your business with a variety of digital solutions to promote your product or
                                 service
