filling about page

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                     </label>
                     <input type="checkbox" id="hamburger" />
                     <div class="slow-visible" id="hamitems">
-                        <a class="nav__link" href="#">Главная</a>
-                        <a class="nav__link" href="#">Обо мне</a>
-                        <a class="nav__link" href="#">Услуги</a>
-                        <a class="nav__link" href="#">Работы</a>
+                        <a class="nav__link" href="./index.html">Главная</a>
+                        <a class="nav__link" href="./about.html">Обо мне</a>
+                        <a class="nav__link" href="./servises.html">Услуги</a>
+                        <a class="nav__link" href="./portfolio.html">Работы</a>
                     </div>
                 </nav>
                 <button class="header__button button">
