small changes about page

--- a/about.html
+++ b/about.html
@@ -82,8 +82,8 @@
                         Инструменты
                     </div>
                     <p class="skills-section__text__p text__item">
-                        Языки програмирования, библиотеки, фреймворки, системы сборки и системы управления сайтами
-                        которые я использую ежедневно и изучаю для будующих проектов.
+                        Языки програмирования, библиотеки, фреймворки, системы сборки, системы управления сайтами и информационные ресурсы
+                        которые я использую ежедневно и изучаю для будущих проектов.
                     </p>
                 </div>
                 <div class="skills-container">
@@ -118,21 +118,20 @@
                         <div class="skills-title">
                             <div class="skills-img">
                                 <svg width="105" height="36" fill="none" aria-labelledby="site-logo"
-                                    viewBox="0 0 105 36" class="sc-hzDkRC JbZXM">
+                                    viewBox="0 0 105 36">
                                     <title id="site-logo">Site logo</title>
                                     <mask id="prefix__logo" width="105" height="35" x="0" y="1"
                                         maskUnits="userSpaceOnUse">
                                         <path fill="#fff" fill-rule="evenodd" d="M.465 1.308h104.531V36H.465V1.308z"
                                             clip-rule="evenodd"></path>
                                     </mask>
-                                    <g mask="url(#prefix__logo)" fill="#28234A" fill-rule="evenodd" clip-rule="evenodd">
+                                    <g fill="#28234A" fill-rule="evenodd" clip-rule="evenodd">
                                         <path
                                             d="M17.86 35.964c6.42 0 8.034-2.592 8.034-6.144 0-4.368-3.925-5.184-7.19-5.717-2.495-.426-3.632-.64-3.632-2.166 0-1.136.99-1.563 2.605-1.563 1.98 0 2.53.569 2.714 2.237l5.21-.78c-.44-3.587-2.459-5.398-7.778-5.398-5.832 0-7.887 2.343-7.887 6.072-.036 4.83 4.512 5.327 7.887 5.895 2.091.39 2.898.746 2.898 2.13 0 1.137-.697 1.634-2.788 1.634-2.31 0-3.008-.39-3.301-2.273l-5.063.746c.477 3.8 2.715 5.327 8.291 5.327zM34.653 32.058c-2.459 0-3.339-.533-3.339-2.308 0-1.598.88-2.238 3.522-2.238h2.641v1.847c0 1.775-.88 2.699-2.824 2.699zm-2.275 3.907c2.861 0 4.145-.924 5.063-2.273v2.024h5.172V22.86c0-4.296-1.651-6.462-7.374-6.462-5.54 0-7.483 1.562-8.254 5.397l5.136.781c.33-1.633.807-2.13 2.935-2.13 2.054 0 2.385.852 2.385 2.273v1.314h-2.422c-6.566 0-8.804 1.988-8.804 6.037 0 3.977 2.018 5.895 6.163 5.895zM43.933 35.716h5.283v-27.4l-5.283 5.238v22.162zM55.673 24.139v-.959c0-1.669.77-2.806 3.081-2.806 2.238 0 2.972.96 2.972 2.806v.959h-6.053zM58.753 36c6.09 0 7.704-2.841 8.071-5.682l-5.025-.746c-.22 1.705-.55 2.593-3.045 2.593-2.531 0-3.082-1.243-3.082-2.877v-1.562h11.152v-3.41c0-4.758-1.87-7.918-8.07-7.918-6.127 0-8.218 3.196-8.218 7.244v5.114c0 3.941 2.128 7.244 8.218 7.244zM76.619 36c6.053 0 8.547-3.09 8.547-7.244v-5.114c0-4.226-2.494-7.244-8.547-7.244-6.053 0-8.474 3.018-8.474 7.244v5.114c0 4.155 2.384 7.244 8.474 7.244zm0-4.12c-2.128 0-3.192-1.1-3.192-2.876v-5.469c0-1.81 1.064-2.911 3.191-2.911 2.128 0 3.265 1.1 3.265 2.912v5.468c0 1.776-1.137 2.877-3.264 2.877zM94.601 21.817H91.77v13.787h-5.283V21.817l5.161-5.237h8.114l-5.16 5.237z">
                                         </path>
                                     </g>
-                                    <path id="color-dash" class="animatedPath" fill="#056DFF" fill-opacity="0.7"
-                                        fill-rule="evenodd" d="M24.332 0L17.38 7.244h17.176L41.508 0H24.332z"
-                                        clip-rule="evenodd"></path>
+                                    <path fill="#056DFF" fill-opacity="0.7"
+                                        d="M24.332 0L17.38 7.244h17.176L41.508 0H24.332z" clip-rule="evenodd"></path>
                                     <path stroke="#28234A" stroke-linecap="round" stroke-linejoin="round"
                                         stroke-width="1.218" d="M9.963 2.998L3.449 9.492h22.59l6.513-6.494H9.962z"
                                         clip-rule="evenodd"></path>
@@ -259,6 +258,34 @@
                             <h3>SQLite</h3>
                         </div>
                         <P> Управление и хранение баз данных </P>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skills-title">
+                            <div class="skills-img">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="-15 0 400 105" xml:space="preserve"
+                                    role="img">
+                                    <path
+                                        d="M197.6 73.2h-17.1v-5.5h3.8V51.9c0-3.7-.7-6.3-2.1-7.9-1.4-1.6-3.3-2.3-5.7-2.3-3.2 0-5.6 1.1-7.2 3.4s-2.4 4.6-2.5 6.9v15.6h6v5.5h-17.1v-5.5h3.8V51.9c0-3.8-.7-6.4-2.1-7.9-1.4-1.5-3.3-2.3-5.6-2.3-3.2 0-5.5 1.1-7.2 3.3-1.6 2.2-2.4 4.5-2.5 6.9v15.8h6.9v5.5h-20.2v-5.5h6V42.4h-6.1v-5.6h13.4v6.4c1.2-2.1 2.7-3.8 4.7-5.2 2-1.3 4.4-2 7.3-2s5.3.7 7.5 2.1c2.2 1.4 3.7 3.5 4.5 6.4 1.1-2.5 2.7-4.5 4.9-6.1s4.8-2.4 7.9-2.4c3.5 0 6.5 1.1 8.9 3.3s3.7 5.6 3.7 10.2v18.2h6.1v5.5zm42.5 0h-13.2V66c-1.2 2.2-2.8 4.1-4.9 5.6-2.1 1.6-4.8 2.4-8.3 2.4-4.8 0-8.7-1.6-11.6-4.9-2.9-3.2-4.3-7.7-4.3-13.3 0-5 1.3-9.6 4-13.7 2.6-4.1 6.9-6.2 12.8-6.2s9.8 2.2 12.3 6.5V22.7h-8.6v-5.6h15.8v50.6h6v5.5zm-13.3-16.8V52c-.1-3-1.2-5.5-3.2-7.3s-4.4-2.8-7.2-2.8c-3.6 0-6.3 1.3-8.2 3.9-1.9 2.6-2.8 5.8-2.8 9.6 0 4.1 1 7.3 3 9.5s4.5 3.3 7.4 3.3c3.2 0 5.8-1.3 7.8-3.8 2.1-2.6 3.1-5.3 3.2-8zm61.5 16.8H269v-5.5h6V51.9c0-3.7-.7-6.3-2.2-7.9-1.4-1.6-3.4-2.3-5.7-2.3-3.1 0-5.6 1-7.4 3s-2.8 4.4-2.9 7v15.9h6v5.5h-19.3v-5.5h6V42.4h-6.2v-5.6h13.6V43c2.6-4.6 6.8-6.9 12.7-6.9 3.6 0 6.7 1.1 9.2 3.3s3.7 5.6 3.7 10.2v18.2h6v5.4h-.2z"
+                                        style="fill: var(--text-primary);"></path>
+                                    <g style="fill: var(--text-link);">
+                                        <path
+                                            d="M42 .2 13.4 92.3H1.7L30.2.2H42zM52.4.2v92.1H42V.2h10.4zm40.3 0L64.2 92.3H52.5L81 .2h11.7zM103.1.2v92.1H92.7V.2h10.4zM294 95h67v8.8h-67V95z">
+                                        </path>
+                                    </g>
+                                </svg>
+                            </div>
+                            <h3>Mozilla for developer</h3>
+                        </div>
+                        <P> Справочник и полезные советы </P>
+                    </div>
+                    <div class="skills-box">
+                        <div class="skills-title">
+                            <div class="skills-img">
+                                <img src="./img/icon/stackoverflow.svg" alt="" class="skills-icons">
+                            </div>
+                            <h3>Stackoverflow</h3>
+                        </div>
+                        <P> Ответы на все вопросы </P>
                     </div>
                 </div>
             </section>
