added social block

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
                     <img class="logo__img" src="./img/logo.png" alt="">
                 </a>
                 <nav id="hamnav" class="header__nav">
-                    
-                    <label  for="hamburger" class="menu"
-                    onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
-                    aria-label="Main Menu">
+
+                    <label for="hamburger" class="menu"
+                        onclick="this.classList.toggle('opened');this.setAttribute('aria-expanded', this.classList.contains('opened'))"
+                        aria-label="Main Menu">
                         <svg width="50" height="50" viewBox="0 0 100 100">
                             <path class="line line1"
                                 d="M 20,29.000046 H 80.000231 C 80.000231,29.000046 94.498839,28.817352 94.532987,66.711331 94.543142,77.980673 90.966081,81.670246 85.259173,81.668997 79.552261,81.667751 75.000211,74.999942 75.000211,74.999942 L 25.000021,25.000058" />
@@ -332,7 +332,7 @@
                             </div>
                             <div class="testimonials__item-company item__text">
                                 компания
-                                
+
                             </div>
                         </div>
                         <div class="testimonials__item" href="#">
@@ -379,7 +379,17 @@
                         <li class="footer__list-item"> <a href="#"> Модернизация сайта</a></li>
                     </ul>
                     <div class="social__icons">
-                        social
+                        <div class="drawer">
+                            <div class="box">
+                                <a href="https://t.me/siniytsin" class="ball ball-1">
+                                    <img src="./img/icon/telegram.svg" alt="telegram logo"></a>
+                                <a href="https://wa.me/+79112013907" class="ball ball-2">
+                                    <img src="./img/icon/whatsapp.svg" alt="whatsapp logo"></a>
+                                <a href="https://www.twitter.com/siniytsin" class="ball ball-3">
+                                    <img src="./img/icon/twitter.svg" alt="twitter logo"></a>
+                            </div>
+                            <div class="cover"><span></span></div>
+                        </div>
                     </div>
                 </div>
                 <div class="line"></div>
