added footer on servises page

--- a/about.html
+++ b/about.html
@@ -336,7 +336,17 @@
                         <li class="footer__list-item"> <a href="#"> Модернизация сайта</a></li>
                     </ul>
                     <div class="social__icons">
-                        social
+                        <div class="drawer">
+                            <div class="box">
+                                <a href="https://t.me/siniytsin" class="ball ball-1">
+                                    <img src="./img/icon/telegram.svg" alt="telegram logo"></a>
+                                <a href="https://wa.me/+79112013907" class="ball ball-2">
+                                    <img src="./img/icon/whatsapp.svg" alt="whatsapp logo"></a>
+                                <a href="https://www.twitter.com/siniytsin" class="ball ball-3">
+                                    <img src="./img/icon/twitter.svg" alt="twitter logo"></a>
+                            </div>
+                            <div class="cover"><span></span></div>
+                        </div>
                     </div>
                 </div>
                 <div class="line"></div>
