--- a/servises.html
+++ b/servises.html
@@ -90,3 +90,53 @@
             </section>
         </div>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__top">
+                    <div class="footer__name">
+                        Sin Web
+                    </div>
+                    <ul class="footer__list-menu">
+                        <li class="footer__list-title"> МЕНЮ</li>
+                        <li class="footer__list-item"> <a href="#"> Обо мне</a></li>
+                        <li class="footer__list-item"> <a href="#"> Услуги</a></li>
+                        <li class="footer__list-item"> <a href="#"> Контакты</a></li>
+                    </ul>
+                    <ul class="footer__list-servises">
+                        <li class="footer__list-title">УСЛУГИ</li>
+                        <li class="footer__list-item"> <a href="#"> Сайт под ключ</a></li>
+                        <li class="footer__list-item"> <a href="#"> Верстка готового макета</a></li>
+                        <li class="footer__list-item"> <a href="#"> Предоставление макета</a></li>
+                        <li class="footer__list-item"> <a href="#"> Модернизация сайта</a></li>
+                    </ul>
+                    <div class="social__icons">
+                        <div class="drawer">
+                            <div class="box">
+                                <a href="https://t.me/siniytsin" class="ball ball-1">
+                                    <img src="./img/icon/telegram.svg" alt="telegram logo"></a>
+                                <a href="https://wa.me/+79112013907" class="ball ball-2">
+                                    <img src="./img/icon/whatsapp.svg" alt="whatsapp logo"></a>
+                                <a href="https://www.twitter.com/siniytsin" class="ball ball-3">
+                                    <img src="./img/icon/twitter.svg" alt="twitter logo"></a>
+                            </div>
+                            <div class="cover"><span></span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="footer__bottom">
+                    <div class="copyright">
+                        Copyright © 2021 Синицин. Все права зарегистрированы.
+                    </div>
+                    <div class="footer__bottom-right">
+                        <a class="footer__text-link" href=""> Условия использования </a>
+                        <a class="footer__text-link" href="">Политика конфеденциальности </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="./js/jquery.js"></script>
+    <script src="./js/main.js"></script>
+</body>
