add in social box

--- a/index.html
+++ b/index.html
@@ -387,6 +387,8 @@
                                     <img src="./img/icon/whatsapp.svg" alt="whatsapp logo"></a>
                                 <a href="https://www.twitter.com/siniytsin" class="ball ball-3">
                                     <img src="./img/icon/twitter.svg" alt="twitter logo"></a>
+                                    <a href="https://github.com/siniytzin" class="ball ball-4">
+                                        <img src="./img/icon/github.svg" alt="github logo"></a>
                             </div>
                             <div class="cover"><span></span></div>
                         </div>
