adder accordion on servises page

--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
                     <div class="skills-box">
                         <div class="skills-title">
                             <div class="skills-img">
-                                <img src="./img/icon/github.svg" alt="" class="skills-icons">
+                                <img src="./img/icon/github-2.svg" alt="" class="skills-icons">
                             </div>
                             <h3>GitHub</h3>
                         </div>
