--- a/servises.html
+++ b/servises.html
@@ -88,6 +88,73 @@
                     </div>
                 </div>
             </section>
+            <section class="servises__accordion">
+                <div class="accordion">
+                    <div class="accordion-header">Сайт под ключ</div>
+                    <div class="accordion-bottom">
+                        <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
+                            Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
+                            Yandex.metrika)</div>
+                        <div class="accordion-bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur, voluptas! Quia corporis reiciendis, dolore minus obcaecati rem accusantium
+                            libero? Earum aliquid deleniti necessitatibus voluptatum deserunt vitae provident optio quam
+                            esse.</div>
+                    </div>
+                    <div class="accordion-header">Верстка готового макета</div>
+                    <div class="accordion-bottom">
+                        <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
+                            Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
+                            Yandex.metrika)</div>
+                        <div class="accordion-bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur, voluptas! Quia corporis reiciendis, dolore minus obcaecati rem accusantium
+                            libero? Earum aliquid deleniti necessitatibus voluptatum deserunt vitae provident optio quam
+                            esse.</div>
+                    </div>
+                    <div class="accordion-header">Предоставление макета</div>
+                    <div class="accordion-bottom">
+                        <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
+                            Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
+                            Yandex.metrika)</div>
+                        <div class="accordion-bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur, voluptas! Quia corporis reiciendis, dolore minus obcaecati rem accusantium
+                            libero? Earum aliquid deleniti necessitatibus voluptatum deserunt vitae provident optio quam
+                            esse.</div>
+                    </div>
+                    <div class="accordion-header">Модернизация сайта</div>
+                    <div class="accordion-bottom">
+                        <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
+                            Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
+                            Yandex.metrika)</div>
+                        <div class="accordion-bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur, voluptas! Quia corporis reiciendis, dolore minus obcaecati rem accusantium
+                            libero? Earum aliquid deleniti necessitatibus voluptatum deserunt vitae provident optio quam
+                            esse.</div>
+                    </div>
+                </div>
+            </section>
+            <section class="servises__page servises__page-bottom">
+                <p class="servises__page-subtitle">
+                    Как мы будем работать
+                </p>
+                <div class="servises__page__inner">
+                    <div class="servises__page__inner-item">
+                        <h2 class="item__text-heading">
+                            Что бы мы дошли до конца нам нужно заранее подготовить некоторые вещи.
+                        </h2>
+                    </div>
+                    <div class="servises__page__inner-item">
+                        <ul class="item__text-numeric-list">
+                            <li>Определение цели и тщательное описание проекта</li>
+                            <li>Перечень необходимых работ</li>
+                            <li>Согласование бюджета</li>
+                            <li>Перечень необходимых работ</li>
+                            <li>Сроки выполнения работ</li>
+                            <li>Будущее обслуживание</li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
     <footer class="footer">
@@ -119,8 +186,8 @@
                                     <img src="./img/icon/whatsapp.svg" alt="whatsapp logo"></a>
                                 <a href="https://www.twitter.com/siniytsin" class="ball ball-3">
                                     <img src="./img/icon/twitter.svg" alt="twitter logo"></a>
-                                    <a href="https://github.com/siniytzin" class="ball ball-4">
-                                        <img src="./img/icon/github.svg" alt="github logo"></a>
+                                <a href="https://github.com/siniytzin" class="ball ball-4">
+                                    <img src="./img/icon/github.svg" alt="github logo"></a>
                             </div>
                             <div class="cover"><span></span></div>
                         </div>
@@ -139,6 +206,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
