--- a/servises.html
+++ b/servises.html
@@ -90,7 +90,37 @@
             </section>
             <section class="servises__accordion">
                 <div class="accordion">
-                    <div class="accordion-header">Сайт под ключ</div>
+                    <div class="accordion-header accordion-header-1">Сайт под ключ</div>
+                    <div class="accordion-bottom">
+                        <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
+                            Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
+                            Yandex.metrika)</div>
+                        <div class="accordion-bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur, voluptas! Quia corporis reiciendis, dolore minus obcaecati rem accusantium
+                            libero? Earum aliquid deleniti necessitatibus voluptatum deserunt vitae provident optio quam
+                            esse.</div>
+                        <ul class="accordion-bottom-list">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="accordion-header accordion-header-2">Верстка готового макета</div>
+                    <div class="accordion-bottom">
+                        <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
+                            Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
+                            Yandex.metrika)</div>
+                        <div class="accordion-bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Consequuntur, voluptas! Quia corporis reiciendis, dolore minus obcaecati rem accusantium
+                            libero? Earum aliquid deleniti necessitatibus voluptatum deserunt vitae provident optio quam
+                            esse.</div>
+                        <ul class="accordion-bottom-list">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                    <div class="accordion-header accordion-header-3">Предоставление макета</div>
                     <div class="accordion-bottom">
                         <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
                             Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
@@ -100,27 +130,7 @@
                             libero? Earum aliquid deleniti necessitatibus voluptatum deserunt vitae provident optio quam
                             esse.</div>
                     </div>
-                    <div class="accordion-header">Верстка готового макета</div>
-                    <div class="accordion-bottom">
-                        <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
-                            Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
-                            Yandex.metrika)</div>
-                        <div class="accordion-bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Consequuntur, voluptas! Quia corporis reiciendis, dolore minus obcaecati rem accusantium
-                            libero? Earum aliquid deleniti necessitatibus voluptatum deserunt vitae provident optio quam
-                            esse.</div>
-                    </div>
-                    <div class="accordion-header">Предоставление макета</div>
-                    <div class="accordion-bottom">
-                        <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
-                            Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
-                            Yandex.metrika)</div>
-                        <div class="accordion-bottom-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Consequuntur, voluptas! Quia corporis reiciendis, dolore minus obcaecati rem accusantium
-                            libero? Earum aliquid deleniti necessitatibus voluptatum deserunt vitae provident optio quam
-                            esse.</div>
-                    </div>
-                    <div class="accordion-header">Модернизация сайта</div>
+                    <div class="accordion-header accordion-header-4">Модернизация сайта</div>
                     <div class="accordion-bottom">
                         <div class="accordion-bottom-title">Разрабатываем сайт, соеденяем ваши желания с реальностью.
                             Дизайнер создает макет, Вы одобряете, верстаем, настраиваем аналитику (GoogleAnalitycs,
@@ -139,7 +149,7 @@
                 <div class="servises__page__inner">
                     <div class="servises__page__inner-item">
                         <h2 class="item__text-heading">
-                            Что бы мы дошли до конца нам нужно заранее подготовить некоторые вещи.
+                            Что бы мы дошли до конца, нам нужно заранее подготовить некоторые вещи.
                         </h2>
                     </div>
                     <div class="servises__page__inner-item">
@@ -151,7 +161,6 @@
                             <li>Сроки выполнения работ</li>
                             <li>Будущее обслуживание</li>
                         </ul>
-                        </p>
                     </div>
                 </div>
             </section>
@@ -166,9 +175,10 @@
                     </div>
                     <ul class="footer__list-menu">
                         <li class="footer__list-title"> МЕНЮ</li>
+                        <li class="footer__list-item"> <a href="#"> Главная</a></li>
                         <li class="footer__list-item"> <a href="#"> Обо мне</a></li>
                         <li class="footer__list-item"> <a href="#"> Услуги</a></li>
-                        <li class="footer__list-item"> <a href="#"> Контакты</a></li>
+                        <li class="footer__list-item"> <a href="#"> Работы</a></li>
                     </ul>
                     <ul class="footer__list-servises">
                         <li class="footer__list-title">УСЛУГИ</li>
@@ -206,7 +216,10 @@
             </div>
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"
+        integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>
     <script src="./js/main.js"></script>
 </body>
