--- a/about.html
+++ b/about.html
@@ -324,9 +324,10 @@
                     </div>
                     <ul class="footer__list-menu">
                         <li class="footer__list-title"> МЕНЮ</li>
+                        <li class="footer__list-item"> <a href="#"> Главная</a></li>
                         <li class="footer__list-item"> <a href="#"> Обо мне</a></li>
                         <li class="footer__list-item"> <a href="#"> Услуги</a></li>
-                        <li class="footer__list-item"> <a href="#"> Контакты</a></li>
+                        <li class="footer__list-item"> <a href="#"> Работы</a></li>
                     </ul>
                     <ul class="footer__list-servises">
                         <li class="footer__list-title">УСЛУГИ</li>
