--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     </h2>
                     <div class="servises__items">
                         <div class="servises__item" href="#">
+                            <img class="servises__item-svg" src="./img/website.svg" alt="">
                             <div class="item__title">
                                 Сайт "под ключ"
                             </div>
@@ -102,6 +103,7 @@
                             </div>
                         </div>
                         <div class="servises__item" href="#">
+                            <img class="servises__item-svg" src="./img/browser.svg" alt="">
                             <div class="item__title">
                                 Верстка Вашего макета
                             </div>
@@ -118,6 +120,7 @@
                             </div>
                         </div>
                         <div class="servises__item" href="#">
+                            <img class="servises__item-svg" src="./img/browser-2.svg" alt="">
                             <div class="item__title">
                                 Свободный макет
                             </div>
@@ -131,6 +134,7 @@
                             </div>
                         </div>
                         <div class="servises__item" href="#">
+                            <img class="servises__item-svg" src="./img/404-error.svg" alt="">
                             <div class="item__title">
                                 Модернизация сайта
                             </div>
@@ -367,9 +371,10 @@
                     </div>
                     <ul class="footer__list-menu">
                         <li class="footer__list-title"> МЕНЮ</li>
+                        <li class="footer__list-item"> <a href="#"> Главная</a></li>
                         <li class="footer__list-item"> <a href="#"> Обо мне</a></li>
                         <li class="footer__list-item"> <a href="#"> Услуги</a></li>
-                        <li class="footer__list-item"> <a href="#"> Контакты</a></li>
+                        <li class="footer__list-item"> <a href="#"> Работы</a></li>
                     </ul>
                     <ul class="footer__list-servises">
                         <li class="footer__list-title">УСЛУГИ</li>
